--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.thiagosousa.firebaseexamples">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
+        android:fullBackupContent="true"
+        android:icon="@drawable/firebase_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/firebase_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activitys.LoginActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,18 +24,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activitys.RegisterActivity"
+            android:exported="true"
             android:label="@string/button_register" />
         <activity
             android:name=".activitys.HomeActivity"
+            android:exported="true"
             android:label="@string/title_activity_home"
             android:parentActivityName=".useful.UtilActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.com.thiagosousa.firebaseexamples.useful.UtilActivity" />
+
         </activity>
+        <activity
+            android:label="@string/database_screen_label"
+            android:name=".activitys.FirebaseDatabaseActivity" />
+
+
     </application>
 
 </manifest>
