--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
                 android:value="br.com.thiagosousa.firebaseexamples.useful.UtilActivity" />
         </activity>
         <activity
+            android:theme="@style/messages_screen_theme"
             android:name=".activitys.FirebaseDatabaseActivity"
             android:label="@string/database_screen_label" />
         <activity android:name=".activitys.SpinnerActivity" />
