--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,14 +56,24 @@
         <activity
             android:name=".activitys.SharedAnimationExample"
             android:theme="@style/SharedAnimationActivityTheme" />
+
         <activity android:name=".activitys.coordinatorlayoutexample.CoordinatorLayoutExampleActivity" />
-        <activity android:name=".activitys.coordinatorlayoutexample.subactivities.AppBarPadraoActivity" />
-        <activity android:name=".activitys.coordinatorlayoutexample.subactivities.AbasActivity" />
+
+        <activity
+            android:name=".activitys.coordinatorlayoutexample.subactivities.AppBarPadraoActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
+
+        <activity
+            android:name=".activitys.coordinatorlayoutexample.subactivities.AbasActivity"
+            android:theme="@style/Theme.Design.NoActionBar" />
+
         <activity
             android:name=".activitys.coordinatorlayoutexample.subactivities.EspacoFlexivelActivity"
             android:label="@string/title_activity_espaco_flexivel"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activitys.coordinatorlayoutexample.subactivities.EspacoFlexivelComImagemActivity"></activity>
+
+        <activity android:name=".activitys.coordinatorlayoutexample.subactivities.EspacoFlexivelComImagemActivity" />
+        <activity android:name=".activitys.MoveFunLogoSvgActivity" />
     </application>
 
 </manifest>
