*Implementando a capacidade de limitar o acesso a determinadas telas a partir da alteração de propriedades individuais no banco de dados.
*Implementação do padrão observer iniciada

*Manutenção quase geral do código para adequar as mudanças

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "br.com.thiagosousa.firebaseexamples"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 7
-        versionName "1.0.25"
+        versionCode 8
+        versionName "1.0.31"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -40,5 +40,8 @@ dependencies {
 //    Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+//    Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
