--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 //    Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
 
 //    Tests
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -43,5 +43,9 @@ dependencies {
 
 //    Circular ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+//    File picker https://github.com/jaiselrahman/FilePicker?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=7002
+    implementation 'com.github.jaiselrahman:FilePicker:1.0.5'
+
 }
 apply plugin: 'com.google.gms.google-services'
