--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@drawable/firebase_logo"
         android:label="@string/app_name"
@@ -76,7 +78,10 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".activitys.CustomListViewViewHolderActivity" />
         <activity android:name=".DetailViewHolderActivity" />
-        <activity android:name=".RecyclerViewActivity"></activity>
+        <activity android:name=".activitys.RecyclerViewActivity" />
+        <activity android:name=".activitys.FragmentsActivity" />
+        <activity android:name=".activitys.filepicker.FilePickerActivity" />
+        <activity android:name=".activitys.filepicker.PhotoPickerActivity"></activity>
     </application>
 
 </manifest>
