Atualizando o projeto para utilizar as novas bibliotecas de suporte androidx, e a nova material design lib

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,9 @@
         <activity android:name=".activitys.RecyclerViewActivity" />
         <activity android:name=".activitys.FragmentsActivity" />
         <activity android:name=".activitys.filepicker.FilePickerActivity" />
-        <activity android:name=".activitys.filepicker.PhotoPickerActivity"></activity>
+        <activity android:name=".activitys.filepicker.PhotoPickerActivity" />
+        <activity android:name=".activitys.LicensesActivity" />
+        <activity android:name=".activitys.LicenseViewActivity"></activity>
     </application>
 
 </manifest>
