--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 8
         versionName "1.0.35"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,10 +22,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 //    Android support and UI libs
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'com.android.support:support-v4:28.0.0-alpha1'
-    implementation 'com.android.support:design:28.0.0-alpha1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
 
 //    Firebase
     implementation 'com.google.firebase:firebase-core:16.0.4'
@@ -33,8 +33,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.3'
 
 //    Tests
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     testImplementation 'junit:junit:4.12'
 
 //    Glide
@@ -44,8 +44,11 @@ dependencies {
 //    Circular ImageView
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
-//    File picker https://github.com/jaiselrahman/FilePicker?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=7002
+//    File picker - https://github.com/jaiselrahman/FilePicker?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=7002
     implementation 'com.github.jaiselrahman:FilePicker:1.0.5'
+
+//    File picker 2 - https://github.com/fishwjy/MultiType-FilePicker
+    implementation 'com.vincent.filepicker:MultiTypeFilePicker:1.0.8'
 
 }
 apply plugin: 'com.google.gms.google-services'
